- Updated some icons. - Added PDF version of the resume.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Font: Copyright 2011 Google Inc. All Rights Reserved. - https://fonts.google.com/specimen/Roboto -->
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
   <!-- Icons: Font Awesome by Dave Gandy - http://fontawesome.io -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109579126-1"></script>
   <script>
@@ -46,8 +46,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large burak-text-color"></i>Research Assistant at <a href="https://parcorelab.ku.edu.tr/" target="_blank">Koç University ParCoreLab</a></p>
             <p><i class="fa fa-fw w3-margin-right w3-large"></i>Teaching Assistant at <a href="https://www.ku.edu.tr/en/" target="_blank">Koç University</a></p>
             <p><a href="mailto:burakbastem@hotmail.com"><i class="fa fa-envelope fa-fw w3-margin-right burak-text-color"></i>burakbastem@hotmail.com</a></p>
-            <p><a href="https://www.linkedin.com/in/burakbastem/" target="_blank"><i class="fa fa-linkedin fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
-            <p><a href="https://github.com/burakbastem/" target="_blank"><i class="fa fa-github fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
+            <p><a href="https://www.linkedin.com/in/burakbastem/" target="_blank"><i class="fab fa-linkedin fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
+            <p><a href="https://github.com/burakbastem/" target="_blank"><i class="fab fa-github fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
+            <p><a href="Burak_Bastem-Resume.pdf" target="_blank"><i class="fas fa-file-pdf fa-fw w3-margin-right w3-large burak-text-color"></i>Resume in PDF</a></p>
           </div>
         </div>
         <!-- End Left Column -->
@@ -60,29 +61,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-university fa-fw w3-margin-right"></i>Education</h2>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Master of Science, Computer Science and Engineering</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2016 - present</h5>
-            <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>2016 - present</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <p>GPA: 3.68 / 4.00</p>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Bachelor of Science, Computer Engineering</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
-            <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <p>GPA: 3.18 / 4.00</p>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Bachelor of Science, Industrial Engineering</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
-            <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <p>GPA: 3.18 / 4.00</p>
             <hr>
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Track Certificate Program, Software Engineering</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
-            <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <p>GPA: 3.54 / 4.00</p>
             <br>
           </div>
@@ -92,8 +93,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Experience</h2>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Research Assistant</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June 2015 - present</h5>
-            <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University ParCoreLab</b>, İstanbul, Turkey</h6>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>June 2015 - present</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Koç University ParCoreLab</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
               <li>Implemented TiDA in C++, tiling based multi-threaded programming model for increasing cache performance with data locality and managing parallelism. TiDA achieves up to 2.10x speedup over OpenMP for simple kernels and resulted in publication at ISC’16.</li>
               <li>Designed and implemented TiDA-acc. TiDA-acc is a tiling based asynchronous GPU programming model which hides transfer latency between CPU and GPU, handles cases where there is no sufficient GPU memory, abstracts GPU programming requirements, and published at ICPP’17.</li>
@@ -104,8 +105,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Teaching Assistant</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
-            <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
               <li>Assisted in teaching, supervision and assessment of Computer Architecture, Operating Systems and Parallel Programming courses.</li>
               <li>Received Teaching Assistant Training Certificate.</li>
@@ -114,8 +115,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Affiliate</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>July - Sept 2016</h5>
-            <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Lawrence Berkeley National Laboratory</b>, Berkey, CA, US</h6>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>July - Sept 2016</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Lawrence Berkeley National Laboratory</b>, Berkey, CA, US</h6>
             <ul style="list-style-type: square">
               <li>Studied existing GPU execution models and SMC implemented with BoxLib, an AMR framework from Berkeley Lab.</li>
               <li>Started implementing GPU version of SMC.</li>
@@ -125,8 +126,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Engineering Intern</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2015</h5>
-            <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Vestel Research and Development</b>, İstanbul, Turkey</h6>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2015</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Vestel Research and Development</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
               <li>Implemented three proof of concept applications for Android platform.</li>
             </ul>
@@ -134,8 +135,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Engineering Intern</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>June - Aug 2014</h5>
-            <h6><i class="fa fa-map-marker w3-margin-right burak-text-color"></i><b>Netaş Telecommunication</b>, İstanbul, Turkey</h6>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>June - Aug 2014</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Netaş Telecommunication</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
               <li>Analyzed and configured static code analysis tools (PMD, FindBugs and Checkstyle) which are integrated to continuous delivery project.</li>
             </ul>
@@ -163,31 +164,31 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-trophy fa-fw w3-margin-right"></i>Honors and Awards</h2>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Research Project Scholarship Recipient</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
                 <h6>Prof. Didem Unat through TÜBİTAK</h6>
                 <hr>
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Half Merit Scholarship Recipient</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2016</h5>
                 <h6>Koç University, Istanbul, Turkey</h6>
                 <hr>
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Second Best Senior Project Award</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2016</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>2016</h5>
                 <h6>Koç University, Istanbul, Turkey</h6>
                 <hr>
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Dean's Honor Roll</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Fall 2014, Fall 2015, Spring 2016</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Fall 2014, Fall 2015, Spring 2016</h5>
                 <h6>Koç University, Istanbul, Turkey</h6>
                 <hr>
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Vehbi Koç Scholar</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Spring 2014, Spring 2015</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Spring 2014, Spring 2015</h5>
                 <h6>Koç University, Istanbul, Turkey</h6>
                 <br>
               </div>
@@ -197,7 +198,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-certificate fa-fw w3-margin-right"></i>Activities</h2>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Presenter and Volunteer, BAŞARIM 2017</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2017</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2017</h5>
                 <ul style="list-style-type: square">
                   <li>BAŞARIM is National High Performance Computing Conference of Turkey.</li>
                   <li>Presented the <a href="#experience">BAŞARIM paper and a poster</a>.</li>
@@ -208,7 +209,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Presenter, ICPP 2017</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2017</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2017</h5>
                 <ul style="list-style-type: square">
                   <li>Presented <a href="#publications">the ICPP paper</a>.</li>
                   <li>Received Certificate of Attendence.</li>
@@ -217,7 +218,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Member, Koç University Computer Club</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2013</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2013</h5>
                 <ul style="list-style-type: square">
                   <li>Coordinated and participated in workshops and seminars.</li>
                 </ul>
@@ -225,7 +226,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               </div>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Member, Koç University Marketing Club</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2011</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>2010 - 2011</h5>
                 <ul style="list-style-type: square">
                   <li>Participated in seminars and career talks with top executives of reputable companies.</li>
                   <li>Received BusinessPort Certificate of Attendence.</li>
@@ -248,9 +249,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                   </li>
                   <li>
                     <p class="w3-margin-bottom  w3-show-inline-block">KAPLAN International Certificate of Achievement</p>
-                    <h6 class="w3-right w3-show-inline-block"><i class="fa fa-calendar fa-fw w3-margin-right burak-text-color"></i>Summer 2012</h5>
+                    <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Summer 2012</h5>
                     <br>
-                    <i class="fa fa-map-marker w3-margin-right burak-text-color"></i>New York City, NY, US
+                    <i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i>New York City, NY, US
                   </li>
                 </ul>
                 <hr>
