--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Lawrence Berkeley National Laboratory</b>, Berkey, CA, US</h6>
             <ul style="list-style-type: square">
               <li>Studied existing GPU execution models and SMC implemented with BoxLib, an AMR framework from Berkeley Lab.</li>
-              <li>Implemented GPU version of SMC.</li>
+              <li>Implemented GPU version of SMC kernels.</li>
               <li>Collaborated on TiDA-acc design.</li>
             </ul>
             <hr>
