- Reorganized file names.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
         <div class="w3-white w3-text-dark-grey w3-card-4">
           <div class="w3-display-container">
-            <img src="burak_bastem.jpg" class="w3-circle w3-margin-top" style="width: 250px; height: 250px" alt="Burak Bastem">
+            <img src="Burak-Bastem.jpg" class="w3-circle w3-margin-top" style="width: 250px; height: 250px" alt="Burak Bastem">
             <h1><b>Burak Bastem</b></h1>
           </div>
           <div class="w3-container w3-left-align w3-show-inline-block">
@@ -48,7 +48,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <p><a href="mailto:burakbastem@hotmail.com"><i class="fa fa-envelope fa-fw w3-margin-right burak-text-color"></i>burakbastem@hotmail.com</a></p>
             <p><a href="https://www.linkedin.com/in/burakbastem/" target="_blank"><i class="fab fa-linkedin fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
             <p><a href="https://github.com/burakbastem/" target="_blank"><i class="fab fa-github fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
-            <p><a href="Burak_Bastem-Resume.pdf" target="_blank"><i class="fas fa-file-pdf fa-fw w3-margin-right w3-large burak-text-color"></i>Resume in PDF</a></p>
+            <p><a href="Burak-Bastem-Resume.pdf" target="_blank"><i class="fas fa-file-pdf fa-fw w3-margin-right w3-large burak-text-color"></i>Resume in PDF</a></p>
           </div>
         </div>
         <!-- End Left Column -->
