--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h1><b>Burak Bastem</b></h1>
           </div>
           <div class="w3-container w3-left-align w3-show-inline-block">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large burak-text-color"></i>Research Assistant at <a href="https://parcorelab.ku.edu.tr/" target="_blank">Koç University ParCoreLab</a></p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large burak-text-color"></i>Senior Software Developer at <a href="https://www.yapikredi.com.tr/en/investor-relations/about-yapi-kredi/" target="_blank">Yapı Kredi</a></p>
+            <p><i class="fa fa-fw w3-margin-right w3-large"></i>Research Assistant at <a href="https://parcorelab.ku.edu.tr/" target="_blank">Koç University ParCoreLab</a></p>
             <p><i class="fa fa-fw w3-margin-right w3-large"></i>Teaching Assistant at <a href="https://www.ku.edu.tr/en/" target="_blank">Koç University</a></p>
             <p><a href="mailto:burakbastem@hotmail.com"><i class="fa fa-envelope fa-fw w3-margin-right burak-text-color"></i>burakbastem@hotmail.com</a></p>
             <p><a href="https://www.linkedin.com/in/burakbastem/" target="_blank"><i class="fab fa-linkedin fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
@@ -92,6 +93,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div id="experience" class="w3-container w3-card-4 w3-white w3-text-dark-grey w3-margin-bottom">
           <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-briefcase fa-fw w3-margin-right"></i>Experience</h2>
           <div class="w3-container">
+            <h5 class="w3-show-inline-block"><b>Senior Software Developer</b></h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>July 2018 - present</h5>
+            <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Yapı Kredi</b>, İstanbul, Turkey</h6>
+            <ul style="list-style-type: square">
+              <li>Developing an R&D project about fraud detection using machine learning in <a href="http://www.ykteknoloji.com.tr/en/#aboutus" target="_blank">R&D team</a>.</li>
+            </ul>
+            <hr>
+          </div>
+          <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Research Assistant</b></h5>
             <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>June 2015 - present</h5>
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Koç University ParCoreLab</b>, İstanbul, Turkey</h6>
@@ -125,7 +135,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-show-inline-block"><b>Engineering Intern</b></h5>
+            <h5 class="w3-show-inline-block"><b>Software Engineering Intern</b></h5>
             <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2015</h5>
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Vestel Research and Development</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
@@ -134,7 +144,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-show-inline-block"><b>Engineering Intern</b></h5>
+            <h5 class="w3-show-inline-block"><b>Software Engineering Intern</b></h5>
             <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>June - Aug 2014</h5>
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Netaş Telecommunication</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
@@ -164,7 +174,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <h2 class="w3-padding-16 burak-text-color"><i class="fa fa-trophy fa-fw w3-margin-right"></i>Honors and Awards</h2>
               <div class="w3-container">
                 <h5 class="w3-show-inline-block"><b>Research Project Scholarship Recipient</b></h5>
-                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
+                <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - July 2018</h5>
                 <h6>Prof. Didem Unat through TÜBİTAK</h6>
                 <hr>
               </div>
