--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h1><b>Burak Bastem</b></h1>
           </div>
           <div class="w3-container w3-left-align w3-show-inline-block">
-            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large burak-text-color"></i>Senior Software Developer at <a href="https://www.yapikredi.com.tr/en/investor-relations/about-yapi-kredi/" target="_blank">Yapı Kredi</a></p>
-            <p><i class="fa fa-fw w3-margin-right w3-large"></i>Research Assistant at <a href="https://parcorelab.ku.edu.tr/" target="_blank">Koç University ParCoreLab</a></p>
-            <p><i class="fa fa-fw w3-margin-right w3-large"></i>Teaching Assistant at <a href="https://www.ku.edu.tr/en/" target="_blank">Koç University</a></p>
+            <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large burak-text-color"></i>Senior Software Developer in <a href="http://www.ykteknoloji.com.tr/en/#aboutus" target="_blank">R&D team</a> at <a href="https://www.yapikredi.com.tr/en/investor-relations/about-yapi-kredi/" target="_blank">Yapı Kredi</a></p>
+            <p><i class="fa fa-fw w3-margin-right w3-large"></i>Research Assistant in <a href="https://parcorelab.ku.edu.tr/" target="_blank">ParCoreLab</a> at <a href="https://www.ku.edu.tr/en/" target="_blank">Koç University</a></p>
             <p><a href="mailto:burakbastem@hotmail.com"><i class="fa fa-envelope fa-fw w3-margin-right burak-text-color"></i>burakbastem@hotmail.com</a></p>
             <p><a href="https://www.linkedin.com/in/burakbastem/" target="_blank"><i class="fab fa-linkedin fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
             <p><a href="https://github.com/burakbastem/" target="_blank"><i class="fab fa-github fa-fw w3-margin-right w3-large burak-text-color"></i>burakbastem</a></p>
@@ -115,7 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="w3-container">
             <h5 class="w3-show-inline-block"><b>Teaching Assistant</b></h5>
-            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - present</h5>
+            <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Sept 2016 - July 2018</h5>
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Koç University</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
               <li>Assisted in teaching, supervision and assessment of Computer Architecture, Operating Systems and Parallel Programming courses.</li>
