-Small updates on phrases.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>July 2018 - present</h5>
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Yapı Kredi</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Developing an R&D project about fraud detection using machine learning in <a href="http://www.ykteknoloji.com.tr/en/#aboutus" target="_blank">R&D team</a>.</li>
+              <li>Working on an R&D project about fraud detection with machine learning in <a href="http://www.ykteknoloji.com.tr/en/#aboutus" target="_blank">R&D team</a>.</li>
             </ul>
             <hr>
           </div>
@@ -105,9 +105,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>June 2015 - present</h5>
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Koç University ParCoreLab</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Implemented TiDA in C++, tiling based multi-threaded programming model for increasing cache performance with data locality and managing parallelism. TiDA achieves up to 2.10x speedup over OpenMP for simple kernels and resulted in publication at ISC’16.</li>
-              <li>Designed and implemented TiDA-acc. TiDA-acc is a tiling based asynchronous GPU programming model which hides transfer latency between CPU and GPU, handles cases where there is no sufficient GPU memory, abstracts GPU programming requirements, and published at ICPP’17.</li>
-              <li>Implemented SMC, a combustion simulation consisting of approximately 10,000 lines of code, with TiDA-acc and presented an article as well as a poster about the study at BAŞARIM’17.</li>
+              <li>Implemented TiDA-C++, tiling based multi-threaded programming model to increase cache performance with data locality and manage parallelism. TiDA achieves up to 2.10x speedup over OpenMP and resulted in publication at ISC’16.</li>
+              <li>Designed and implemented TiDA-acc. TiDA-acc is a tiling based asynchronous GPU programming model which successfully hides transfer latency between CPU and GPU, handles cases where there is no sufficient GPU memory, abstracts GPU programming requirements and is published at ICPP’17.</li>
+              <li>Integrated TiDA-acc to SMC, a combustion simulation consisting of approximately 10,000 lines of code, and presented an article as well as a poster about the study at BAŞARIM’17.</li>
               <li>Currently developing tiling based asynchronous multi-process multi-GPU execution model.</li>
             </ul>
             <hr>
@@ -138,7 +138,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>Aug 2015</h5>
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Vestel Research and Development</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Implemented three proof of concept applications for Android platform.</li>
+              <li>Developed three proof of concept applications for Android platform.</li>
             </ul>
             <hr>
           </div>
