- Added Python as a skill.

--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <h5 class="w3-tag burak-color">C++</h5>
                 <h5 class="w3-tag burak-color">Java</h5>
                 <h5 class="w3-tag burak-color">Julia</h5>
+                <h5 class="w3-tag burak-color">Python</h5>
                 <h5 class="w3-tag burak-color">Objective-C</h5>
                 <h5 class="w3-tag burak-color">SQL</h5>
                 <h5 class="w3-tag burak-color">HTML</h5>
