--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>July 2018 - present</h5>
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Yapı Kredi</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Working on an R&D project about fraud detection with machine learning in <a href="http://www.ykteknoloji.com.tr/en/#aboutus" target="_blank">R&D team</a>.</li>
+              <li>Working on credit card fraud detection with machine learning in R&D team.</li>
+              <li>Developing supervised and semi-supervised state-of-the-art models for the detection.</li>
             </ul>
             <hr>
           </div>
