--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <li>Implemented TiDA-C++, tiling based multi-threaded programming model to increase cache performance with data locality and manage parallelism. TiDA achieves up to 2.10x speedup over OpenMP and resulted in publication at ISC’16.</li>
               <li>Designed and implemented TiDA-acc. TiDA-acc is a tiling based asynchronous GPU programming model which successfully hides transfer latency between CPU and GPU, handles cases where there is no sufficient GPU memory, abstracts GPU programming requirements and is published at ICPP’17.</li>
               <li>Integrated TiDA-acc to SMC, a combustion simulation consisting of approximately 10,000 lines of code, and presented an article as well as a poster about the study at BAŞARIM’17.</li>
-              <li>Currently developing tiling based asynchronous multi-process multi-GPU execution model.</li>
+              <li>Currently developing tiling based high-level asynchronous programming model for GPU clusters.</li>
             </ul>
             <hr>
           </div>
@@ -282,6 +282,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 <h5 class="w3-tag burak-color">CUDA</h5>
                 <h5 class="w3-tag burak-color">OpenACC</h5>
                 <h5 class="w3-tag burak-color">Knet</h5>
+                <h5 class="w3-tag burak-color">Keras</h5>
+                <h5 class="w3-tag burak-color">NumPy</h5>
+                <h5 class="w3-tag burak-color">Pandas</h5>
                 <h5 class="w3-tag burak-color">OpenCV</h5>
                 <h5 class="w3-tag burak-color">OpenGL</h5>
                 <h5 class="w3-tag burak-color">Linux</h5>
