- Updated description of current position.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h6 class="w3-right w3-show-inline-block"><i class="far fa-calendar fa-fw w3-margin-right burak-text-color"></i>July 2018 - present</h5>
             <h6><i class="fas fa-map-marker-alt w3-margin-right burak-text-color"></i><b>Yapı Kredi</b>, İstanbul, Turkey</h6>
             <ul style="list-style-type: square">
-              <li>Developing state-of-the-art machine learning models for credit card fraud detection in R&D division.</li>
+              <li>Developing machine learning models for credit card fraud detection in R&D division.</li>
             </ul>
             <hr>
           </div>
