- Added new publication.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <li>Implemented TiDA-C++, tiling based multi-threaded programming model to increase cache performance with data locality and manage parallelism. TiDA achieves up to 2.10x speedup over OpenMP and resulted in publication at ISC’16.</li>
               <li>Designed and developed TiDA-acc. TiDA-acc is a tiling-based GPU programming model which manages distinct address spaces, successfully hides transfer latency between CPU and GPU, automatically generates GPU code, handles cases where there is no sufficient GPU memory and is published at ICPP’17.</li>
               <li>Integrated TiDA-acc to SMC, a combustion simulation consisting of approximately 10,000 lines of code, and presented an article as well as a poster about the study at BAŞARIM’17, Turkey’s national HPC conference.</li>
-              <li>Developed a tiling-based high-level asynchronous programming model for GPU clusters using TiDA-acc. On top of what TiDA-acc offers, it utilizes all GPUs (and CPUs) in the system, overlaps any type of communication with computation and achieves good speedup. An article about the study is under review for publication.</li>
+              <li>Developed a tiling-based high-level asynchronous programming model for GPU clusters using TiDA-acc. On top of what TiDA-acc offers, it utilizes all GPUs (and CPUs) in the system, overlaps any type of communication with computation and achieves good speedup. The study will be published at HPCAsia’20.</li>
             </ul>
             <hr>
           </div>
@@ -160,7 +160,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h2 style="padding-top:16px" class="burak-text-color"><i class="fa fa-file fa-fw w3-margin-right"></i>Publications</h2>
           <h4 style="padding-bottom:16px">Conference Proceedings</h4>
           <div class="w3-container">
-            <h5>Burak Bastem, Didem Unat, <b>“Tiling-Based Programming Model for Structured Grids on GPU Clusters”</b>, under review</h5>
+            <h5>Burak Bastem, Didem Unat, <b>“Tiling-Based Programming Model for Structured Grids on GPU Clusters”</b>, International Conference on High Performance Computing in Asia-Pacific Region (HPCAsia), Fukuoka, Japan, January 2020</h5>
               <hr>
             </div>
           <div class="w3-container">
